--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,6 +1,6 @@
 - name: <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>
   photo: beidichen.png
-  info: Associate professor
+  info: Assistant professor
   email: beidic@andrew.cmu.edu
   number_educ: 2
   education1: Postdoc Stanford University
