--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -18,3 +18,10 @@
     blog: https://infini-ai-lab.github.io/Sequoia-Page/
     display: Arxiv
   highlight: 1
+
+- title: "H2O: Heavy-Hitter Oracle for Efficient Generative Inference of Large Language Models"
+  authors: Zhenyu Zhang, Ying Sheng, Tianyi Zhou, Tianlong Chen, Lianmin Zheng, Ruisi Cai, Zhao Song, Yuandong Tian, Christopher Ré, Clark Barrett, Zhangyang Wang,
+  link:
+    url: https://arxiv.org/abs/2306.14048
+    display: NeurIPS 2023
+  highlight: 1
