--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -19,9 +19,143 @@
     display: Arxiv
   highlight: 1
 
-- title: "H2O: Heavy-Hitter Oracle for Efficient Generative Inference of Large Language Models"
-  authors: Zhenyu Zhang, Ying Sheng, Tianyi Zhou, Tianlong Chen, Lianmin Zheng, Ruisi Cai, Zhao Song, Yuandong Tian, Christopher Ré, Clark Barrett, Zhangyang Wang, Beidi Chen
+- title: "Joma: Demystifying multilayer transformers via joint dynamics of mlp and attention"
+  authors: Tian, Yuandong; Wang, Yiping; Zhang, Zhenyu; Chen, Beidi; Du, Simon; 
+  link:
+    url: https://arxiv.org/abs/2310.00535
+    display: arXiv preprint arXiv:2310.00535
+  highlight: 1
+  
+- title: "Efficient streaming language models with attention sinks"
+  authors: Xiao, Guangxuan; Tian, Yuandong; Chen, Beidi; Han, Song; Lewis, Mike; 
+  link:
+    url: https://arxiv.org/abs/2309.17453
+    display: arXiv preprint arXiv:2309.17453
+  highlight: 1
+  
+- title: "CocktailSGD: Fine-tuning foundation models over 500Mbps networks"
+  authors: Wang, Jue; Lu, Yucheng; Yuan, Binhang; Chen, Beidi; Liang, Percy; De Sa, Christopher; Re, Christopher; Zhang, Ce; 
+  link:
+    url: https://proceedings.mlr.press/v202/wang23t/wang23t.pdf
+    display: International Conference on Machine Learning
+  highlight: 1
+  
+- title: "H $ _2 $ O: Heavy-Hitter Oracle for Efficient Generative Inference of Large Language Models"
+  authors: Zhang, Zhenyu; Sheng, Ying; Zhou, Tianyi; Chen, Tianlong; Zheng, Lianmin; Cai, Ruisi; Song, Zhao; Tian, Yuandong; Ré, Christopher; Barrett, Clark; 
   link:
     url: https://arxiv.org/abs/2306.14048
-    display: NeurIPS 2023
+    display: International Conference on Machine Learning
   highlight: 1
+  
+- title: "Deja vu: Contextual sparsity for efficient llms at inference time"
+  authors: Liu, Zichang; Wang, Jue; Dao, Tri; Zhou, Tianyi; Yuan, Binhang; Song, Zhao; Shrivastava, Anshumali; Zhang, Ce; Tian, Yuandong; Re, Christopher; 
+  link:
+    url: https://arxiv.org/abs/2310.17157
+    display: International Conference on Machine Learning
+  highlight: 1
+  
+- title: "FlexGen: High-Throughput Generative Inference of Large Language Models with a Single GPU"
+  authors: Sheng, Ying; Zheng, Lianmin; Yuan, Binhang; Li, Zhuohan; Ryabinin, Max; Chen, Beidi; Liang, Percy; Re, Christopher; Stoica, Ion; Zhang, Ce; 
+  link:
+    url: https://arxiv.org/abs/2303.06865
+    display: International Conference on Machine Learning
+  highlight: 1
+  
+- title: "Scan and Snap: Understanding Training Dynamics and Token Composition in 1-layer Transformer"
+  authors: Tian, Yuandong; Wang, Yiping; Chen, Beidi; Du, Simon; 
+  link:
+    url: https://arxiv.org/abs/2305.16380
+    display: International Conference on Machine Learning
+  highlight: 1
+  
+- title: "Decentralized training of foundation models in heterogeneous environments"
+  authors: Yuan, Binhang; He, Yongjun; Davis, Jared Quincy; Zhang, Tianyi; Dao, Tri; Chen, Beidi; Liang, Percy; Re, Christopher; Zhang, Ce; 
+  link:
+    url: https://arxiv.org/abs/2206.01288
+    display: Neural Information Processing Systems.
+  highlight: 1
+  
+- title: "Monarch: Expressive structured matrices for efficient and accurate training"
+  authors: Dao, Tri; Chen, Beidi; Sohoni, Nimit S; Desai, Arjun; Poli, Michael; Grogan, Jessica; Liu, Alexander; Rao, Aniruddh; Rudra, Atri; Ré, Christopher; 
+  link:
+    url: https://arxiv.org/abs/2204.00595
+    display: International Conference on Machine Learning
+  highlight: 1
+  
+- title: "Pixelated butterfly: Simple and efficient sparse training for neural network models"
+  authors: Chen, Beidi; Dao, Tri; Liang, Kaizhao; Yang, Jiaming; Song, Zhao; Rudra, Atri; Re, Christopher; 
+  link:
+    url: https://arxiv.org/abs/2112.00029
+    display: International Conference on Learning Representations
+  highlight: 1
+  
+- title: "Scatterbrain: Unifying sparse and low-rank attention"
+  authors: Chen, Beidi; Dao, Tri; Winsor, Eric; Song, Zhao; Rudra, Atri; Ré, Christopher; 
+  link:
+    url: https://arxiv.org/abs/2110.15343
+    display: Advances in Neural Information Processing Systems
+  highlight: 1
+  
+- title: "Locality sensitive teaching"
+  authors: Xu, Zhaozhuo; Chen, Beidi; Li, Chaojian; Liu, Weiyang; Song, Le; Lin, Yingyan; Shrivastava, Anshumali; 
+  link:
+    url: https://proceedings.neurips.cc/paper_files/paper/2021/file/95c3f1a8b262ec7a929a8739e21142d7-Paper.pdf
+    display: Advances in Neural Information Processing Systems
+  highlight: 1
+  
+- title: "MONGOOSE: A learnable LSH framework for efficient neural network training"
+  authors: Chen, Beidi; Liu, Zichang; Peng, Binghui; Xu, Zhaozhuo; Li, Jonathan Lingjie; Dao, Tri; Song, Zhao; Shrivastava, Anshumali; Re, Christopher; 
+  link:
+    url: https://openreview.net/pdf?id=wWK7yXkULyh
+    display: International Conference on Learning Representations
+  highlight: 1
+  
+- title: "Fast and accurate stochastic gradient estimation"
+  authors: Chen, Beidi; Xu, Yingchen; Shrivastava, Anshumali; 
+  link:
+    url: https://proceedings.neurips.cc/paper_files/paper/2019/file/a1e865a9b1065392ed6035d8ccd072d9-Paper.pdf
+    display: Advances in Neural Information Processing Systems
+  highlight: 1
+  
+- title: "Angular visual hardness"
+  authors: Chen, Beidi; Liu, Weiyang; Yu, Zhiding; Kautz, Jan; Shrivastava, Anshumali; Garg, Animesh; Anandkumar, Animashree; 
+  link:
+    url: https://arxiv.org/abs/1912.02279
+    display: International Conference on Machine Learning
+  highlight: 1
+  
+- title: "SLIDE: In Defense of Smart Algorithms over Hardware Acceleration for Large-scale Deep Learning Systems"
+  authors: Chen, Beidi; Medini, Tharun; Farwell, James; Gobriel, Sameh; Tai, Charlie; Shrivastava, Anshumali; 
+  link:
+    url: https://arxiv.org/abs/1903.03129
+    display: Proceedings of Machine Learning and System
+  highlight: 1
+  
+- title: "Densified winner take all (WTA) hashing for sparse datasets"
+  authors: Chen, Beidi; Shrivastava, Anshumali; 
+  link:
+    url: https://arxiv.org/abs/1612.01834
+    display: Uncertainty in artificial intelligence
+  highlight: 1
+  
+- title: "Sub-linear privacy-preserving near-neighbor search"
+  authors: Riazi, M Sadegh; Chen, Beidi; Shrivastava, Anshumali; Wallach, Dan; Koushanfar, Farinaz; 
+  link:
+    url: https://eprint.iacr.org/2019/1222.pdf
+    display: arXiv preprint arXiv:1612.01835
+  highlight: 1
+  
+- title: "Unique entity estimation with application to the Syrian conflict"
+  authors: Chen, Beidi; Shrivastava, Anshumali; Steorts, Rebecca C; 
+  link:
+    url: https://arxiv.org/abs/1710.02690
+    display: The Annals of Applied Statistics
+  highlight: 1
+  
+- title: "Analyzing log analysis: An empirical study of user log mining"
+  authors: Alspaugh, Sara; Chen, Beidi; Lin, Jessica; Ganapathi, Archana; Hearst, Marti; Katz, Randy; 
+  link:
+    url: https://www.usenix.org/system/files/conference/lisa14/lisa14-paper-alspaugh.pdf
+    display: 28th Large Installation System Administration Conference (LISA14)
+  highlight: 1
+
