--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,14 +1,12 @@
-- date: 1. April 2024
-  headline: Welcome Yang!
+- date: 11. August 2024
+  headline: We will present Layer skip at ACL 2024
 
-- date: 15. September 2023
-  headline: Welcome Yang!
+- date: 21. July 2024
+  headline: We will present five papers Galore, LESS, LoCoCo, HexGen, and KIVI at ICML 2024
+  
+- date: 12. May 2024
+  headline: We will present Q-Hitter at MLSys 2024
 
-- date: 1. November 2023
-  headline: All the best with your new position!
+- date: 7. May 2024
+  headline: We will present StreamingLLM and JoMA at ICLR 2024
 
-- date: 1. September 2023
-  headline: Welcome Yang!
-
-- date: 22. June 2023
-  headline: Our paper is out!
