--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,12 +1,12 @@
-- date: 11. August 2024
-  headline: We will present Layer skip at ACL 2024
+- date: 11 August 2024
+  headline: We will present [Layer Skip](https://arxiv.org/abs/2404.16710) at ACL 2024.
 
-- date: 21. July 2024
-  headline: We will present five papers Galore, LESS, LoCoCo, HexGen, and KIVI at ICML 2024
+- date: 21 July 2024
+  headline: We will present five papers Galore, [LESS](https://arxiv.org/abs/2402.09398), [LoCoCo](https://arxiv.org/abs/2406.05317), [HexGen](https://arxiv.org/abs/2311.11514), and [KIVI](https://arxiv.org/abs/2402.02750) at ICML 2024.
   
-- date: 12. May 2024
-  headline: We will present Q-Hitter at MLSys 2024
+- date: 12 May 2024
+  headline: We will present [Q-Hitter](https://mlsys.org/virtual/2024/poster/2642) at MLSys 2024.
 
-- date: 7. May 2024
-  headline: We will present StreamingLLM and JoMA at ICLR 2024
+- date: 7 May 2024
+  headline: We will present [StreamingLLM](https://arxiv.org/abs/2309.17453) and [JoMA](https://arxiv.org/abs/2310.00535) at ICLR 2024.
 
