--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,7 +2,7 @@
   headline: We will present [Layer Skip](https://arxiv.org/abs/2404.16710) at ACL 2024.
 
 - date: 21 July 2024
-  headline: We will present five papers Galore, [LESS](https://arxiv.org/abs/2402.09398), [LoCoCo](https://arxiv.org/abs/2406.05317), [HexGen](https://arxiv.org/abs/2311.11514), and [KIVI](https://arxiv.org/abs/2402.02750) at ICML 2024.
+  headline: We will present five papers [Galore](https://arxiv.org/abs/2403.03507), [LESS](https://arxiv.org/abs/2402.09398), [LoCoCo](https://arxiv.org/abs/2406.05317), [HexGen](https://arxiv.org/abs/2311.11514), and [KIVI](https://arxiv.org/abs/2402.02750) at ICML 2024.
   
 - date: 12 May 2024
   headline: We will present [Q-Hitter](https://mlsys.org/virtual/2024/poster/2642) at MLSys 2024.
