--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 7 October 2024
+  headline: We will present [TriForce](https://arxiv.org/abs/2404.11912) and [GRIFFIN](https://arxiv.org/abs/2404.01365) at COLM 2024.
+
 - date: 11 August 2024
   headline: We will present [Layer Skip](https://arxiv.org/abs/2404.16710) at ACL 2024.
 
