magicdec blog link updated

--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -22,6 +22,6 @@
   authors: Jian Chen, Vashisth Tiwari, Ranajoy Sadhukhan, Zhuoming Chen, Jinyuan Shi, Ian En-Hsu Yen, Beidi Chen
   link:
     url: https://arxiv.org/abs/2408.11049v3
-    blog: https://ranonrkm.github.io/magicdec_hosting/
+    blog: https://infini-ai-lab.github.io/MagicDec/
     display: Arxiv
   highlight: 1
