--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 9 December 2024
+  headline: We will present [TriForce](https://arxiv.org/abs/2404.11912) and [GRIFFIN](https://arxiv.org/abs/2404.01365) at COLM 2024.
+
 - date: 7 October 2024
   headline: We will present [TriForce](https://arxiv.org/abs/2404.11912) and [GRIFFIN](https://arxiv.org/abs/2404.01365) at COLM 2024.
 
@@ -5,7 +8,7 @@
   headline: We will present [Layer Skip](https://arxiv.org/abs/2404.16710) at ACL 2024.
 
 - date: 21 July 2024
-  headline: We will present five papers [Galore](https://arxiv.org/abs/2403.03507), [LESS](https://arxiv.org/abs/2402.09398), [LoCoCo](https://arxiv.org/abs/2406.05317), [HexGen](https://arxiv.org/abs/2311.11514), and [KIVI](https://arxiv.org/abs/2402.02750) at ICML 2024.
+  headline: We will present five papers [Galore](https://arxiv.org/abs/2403.03507), [LESS](https://arxiv.org/abs/2402.09398), [LoCoCo](https://arxiv.org/abs/2406.05317), [HexGen](https://arxiv.org/abs/2311.11514), [Compress, then prompt](https://arxiv.org/abs/2305.11186), and [KIVI](https://arxiv.org/abs/2402.02750) at ICML 2024.
   
 - date: 12 May 2024
   headline: We will present [Q-Hitter](https://mlsys.org/virtual/2024/poster/2642) at MLSys 2024.
