--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 9 December 2024
-  headline: We will present [TriForce](https://arxiv.org/abs/2404.11912) and [GRIFFIN](https://arxiv.org/abs/2404.01365) at COLM 2024.
+  headline: We will present [Sequoia(<font color=Red>Spotlight</font>)](https://arxiv.org/abs/2402.12374), [Sirius](https://www.arxiv.org/pdf/2409.03856), [S2FT](), and [Learn To be Efficient(<font color=Red>Spotlight</font>)](https://arxiv.org/abs/2402.06126), [SpecExec](https://arxiv.org/abs/2406.02532), [Megalodon](https://arxiv.org/abs/2404.08801), [Mini-Seq](https://www.arxiv.org/abs/2407.15892), [Nearest Neighbor SpecDec](https://arxiv.org/abs/2405.19325), [Who Needs Features?](), [Found in the Middle](https://arxiv.org/abs/2403.04797) led by collaborators at NeurIPS 2024.
 
 - date: 7 October 2024
   headline: We will present [TriForce](https://arxiv.org/abs/2404.11912) and [GRIFFIN](https://arxiv.org/abs/2404.01365) at COLM 2024.
@@ -8,11 +8,11 @@
   headline: We will present [Layer Skip](https://arxiv.org/abs/2404.16710) at ACL 2024.
 
 - date: 21 July 2024
-  headline: We will present five papers [Galore](https://arxiv.org/abs/2403.03507), [LESS](https://arxiv.org/abs/2402.09398), [LoCoCo](https://arxiv.org/abs/2406.05317), [HexGen](https://arxiv.org/abs/2311.11514), [Compress, then prompt](https://arxiv.org/abs/2305.11186), and [KIVI](https://arxiv.org/abs/2402.02750) at ICML 2024.
+  headline: We will present [LESS](https://arxiv.org/abs/2402.09398), [LoCoCo](https://arxiv.org/abs/2406.05317), and [Galore(<font color=Red>Oral</font>)](https://arxiv.org/abs/2403.03507), [HexGen](https://arxiv.org/abs/2311.11514), [Compress, then prompt](https://arxiv.org/abs/2305.11186), and [KIVI](https://arxiv.org/abs/2402.02750) led by collaborators at ICML 2024.
   
-- date: 12 May 2024
-  headline: We will present [Q-Hitter](https://mlsys.org/virtual/2024/poster/2642) at MLSys 2024.
+# - date: 12 May 2024
+#   headline: We will present [Q-Hitter](https://mlsys.org/virtual/2024/poster/2642) at MLSys 2024.
 
-- date: 7 May 2024
-  headline: We will present [StreamingLLM](https://arxiv.org/abs/2309.17453) and [JoMA](https://arxiv.org/abs/2310.00535) at ICLR 2024.
+# - date: 7 May 2024
+#   headline: We will present [StreamingLLM](https://arxiv.org/abs/2309.17453) and [JoMA](https://arxiv.org/abs/2310.00535) at ICLR 2024.
 
