--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -51,3 +51,9 @@
   info: Master Student
   email: vashistt@andrew.cmu.edu
   number_educ: 0
+
+- name: Yuwei An
+  photo: vash.jpg
+  info: Master Student
+  email: yuweia@andrew.cmu.edu
+  number_educ: 0
