--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -53,7 +53,7 @@
   number_educ: 0
 
 - name: Yuwei An
-  photo: vash.jpg
+  photo: Yuwei.JPG
   info: Master Student
-  email: yuweia@andrew.cmu.edu
+  email: ayw.sirius19@gmail.com
   number_educ: 0
