--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,11 @@
+- title: "MagicPIG: LSH Sampling for Efficient LLM Generation"
+  image: S2FT.png
+  description: MagicPIG leverages sampling for efficient attention estimation, utilizing CPUs as augmented memory to significantly enhance inference throughput. This approach stands out by combining computational efficiency with scalability, making it well-suited for handling resource-intensive tasks. Unlike conventional TopK attention mechanisms, which can struggle with maintaining both precision and performance as context lengths grow, MagicPIG excels in processing complex tasks such as long-context reasoning. By effectively distributing memory and computation between CPUs and accelerators, MagicPIG not only ensures high throughput but also maintains the fidelity of attention mechanisms over extended sequences.
+  link:
+    url: https://arxiv.org/abs/2410.16179
+    blog: https://www.lsh-ai.com
+    display: Arxiv
+  highlight: 1
 - title: "S2FT: Efficient, Scalable and Generalizable LLM Fine-tuning by Structured Sparsity"
   image: S2FT.png
   description: Structured Sparse Fine-Tuning (S2FT) is a novel PEFT family for LLMs that achieves high quality, efficient training, and scalable serving simultaneously. It accomplishes this by "selecting sparsely and computing densely". Compared to LoRA，S2FT enhances generalization ability on both commonsense and arithmetic reasoning with 4.6% and 1.3% average improvements while reduce 10% training time and memory. Furthermore, S2FT's enables scalable effective fusion, fast switch, and efficient parallelism for serving multiple adapters. These features make S2FT particularly valuable for the large-scale, real-world deployment of foundation models in various domains.
