--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -28,7 +28,7 @@
   email: yangzho6@andrew.cmu.edu
   number_educ: 0
 
-- name: Ranajoy Sadhukhan
+- name: <a href="https://ranonrkm.github.io/">Ranajoy Sadhukhan</a>
   photo: ranajoy.jpg
   info: PhD Student
   email: rsadhukh@andrew.cmu.edu
